README e alterações para funcionamento correto de get e post